# PerfMon

./: AndroidManifest.xml  README
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: procrank  procrank_arm
app/src/main/java/com/kspriggs/tools/perfmon/: CpuFrag.java  CpuMon.java  GraphView.java  HistoryBuffer.java  IncomingReceiver.java  MemFrag.java  MemMon.java  MemTest.java  PerfMonActivity.java  PerfService.java  SumFrag.java  Top.java  WriteLog.java
app/src/main/jni/: README  native.c
app/src/main/res/layout/: mem_layout.xml  summary_layout.xml
app/src/main/res/layout-h600dp/: cpu_layout.xml  main.xml  mem_layout.xml  tasklist.xml
app/src/main/res/layout-w1280dp-h648dp/: cpu_layout.xml  main.xml  mem_layout.xml
app/src/main/res/layout-w600dp/: cpu_layout.xml  main.xml  mem_layout.xml
app/src/main/res/menu/: cpu_menu.xml  main_menu.xml  mem_context_menu.xml  mem_menu.xml
app/src/main/res/values/: strings.xml
jni/: Android.mk  Android.mk.procrank.c  CMakeLists.txt  native.c  procrank.c
